<resources>
    <string name="app_name">Anime Schedule</string>
    <string name="action_settings">Settings</string>
    <string name="message_notice_title">Notice</string>
    <string name="message_lose_changes">You have unsaved changes, continue?</string>
    <string name="message_settings_saved">Settings saved.</string>
    <string name="action_restore_settings">Reset Settings</string>
    <string name="message_overwrite_settings">This operation will overwrite your current settings, continue?</string>
    <string name="message_settings_cleared">Settings were reset.</string>
    <string name="label_anime_title">Anime Title</string>
    <string name="label_anime_description">Anime Description</string>
    <string name="label_anime_ranking">Ranking</string>
    <string name="label_anime_category">Category</string>
    <string name="message_uncategoried">No Category</string>
    <string name="label_anime_cover">Anime Cover</string>
    <string name="action_show_anime_update">Anime update info.</string>
    <string name="action_view_web_page">View web page</string>
    <string name="message_build_default_settings">Building default settings...</string>
    <string name="action_add_item">Add Anime</string>
    <string name="action_remove_item">Remove Anime</string>
    <string name="action_remove_all_item">Remove All Anime</string>
    <string name="message_remove_all_warning">This will remove all Anime in the list, continue?</string>
    <string name="action_edit_item">Edit Anime</string>
    <string name="label_start_date">Start Date (yyyy-M-d)</string>
    <string name="label_update_period">Update Period</string>
    <string name="label_anime_episode_count">Episode Count</string>
    <string name="label_anime_absense_count">Absense Count</string>
    <string name="label_watch_url">Anime URL</string>
    <string name="label_watched_episode">Watched Episodes</string>
    <string name="label_abandoned">Abandoned</string>
    <string name="label_color">Color</string>
    <string name="message_not_watched">Not Watched</string>
    <string name="message_saving_item">Saving data...</string>
    <string name="menu_check_update">Check Update</string>
    <string name="message_new_version">Found new version, update?\nCurrent: %s\nNew: %s</string>
    <string name="error_check_update">Cannot check update.</string>
    <string name="message_no_update">No update.</string>
    <string name="error_permission_network">No network permission.</string>
    <string name="action_anime_auto_fill">Auto Fill</string>
    <string name="label_version_info">Version: %s\nBuild on: %s</string>
    <string name="title_total_count">\u0020(Total: %d)</string>
    <string name="message_remove_warning">Are you sure to delete this Anime?</string>
    <string name="action_show_count_statistics">Show count</string>
    <string name="label_count_stat_sub">Subscribed</string>
    <string name="label_sort_method">Sort method</string>
    <string name="label_sort_split_abandoned">Separate Abandoned</string>
    <string name="edit_hint_search_anime">Enter the Anime title here...</string>
    <string name="message_anime_not_found">No Anime found named "%s".</string>
    <string name="message_anime_jumping">Jump to the Anime "%s"...</string>
    <string name="error_permission_reading_sdcard">No reading external storage permission.</string>
    <string name="message_rename_file">Rename: %s\nto: %s...</string>
    <string name="message_cannot_rename">Cannot rename: %s</string>
    <string name="message_cannot_download_cover">Failed to download cover:\n%s\nof: %s</string>
    <string name="label_schedule_update_episode">\u0020update ep%d</string>
    <string name="label_schedule_to_watch">to watch:</string>
    <string name="message_no_data">No data.</string>
    <string name="message_last_watched_info">Last watch: %s \"%s\" Ep%d</string>
    <string name="message_update_info">Updates:</string>
    <string name="message_title_updated_to">%s %s Ep%d</string>
    <string name="message_followed_all_anime">All Animes are watched to latest episode.</string>
    <string name="button_dont_show_again_today">Don\'t show again today</string>
    <string name="message_novalid_bilibili_url">No valid Bilibili URL.</string>
    <string name="message_unexpected_status">Unexpected status.</string>
    <string name="message_not_supported_bilibili_url">Not supported Bilibili URL, it is recommended that you use the
        international version of Bilibili client for better support.
    </string>
    <string name="message_not_supported_url">Not supported URL.</string>
    <string name="message_unable_to_fetch_episode_id">Unable to fetch episode id.</string>
    <string name="message_json_exception">JSON exception:\n%s</string>
    <string name="message_io_exception">IO exception:\n%s</string>
    <string name="message_unable_to_fetch_anime_info">Unable to fetch Anime information.</string>
    <string name="message_exception">Exception:\n%s</string>
    <string name="message_error_on_reading_stream">Error on reading stream:\n%s</string>
    <string name="message_unable_to_read_url">Cannot read the URL.</string>
    <string name="message_unable_get_id_number">Cannot get the ID number.</string>
    <string name="message_unable_get_id_number_line">Cannot find line containing the ID number.</string>
    <string name="message_cannot_fetch_property">Cannot fetch \"%s\".</string>
    <string name="message_iqiyi_cannot_fetch_category">Cannot get the category.</string>
    <string name="message_date_string_too_short">Date string is not enough to 8 digits which is %d digits.</string>
    <string name="message_cannot_write_to_file">Cannot write to file:\n%s</string>
    <string name="message_cannot_launch_chrome">Cannot launch Chrome, please use another browser.</string>
    <string name="label_count_stat_followed">Followed</string>
    <string name="label_count_stat_following">Following</string>
    <string name="label_count_stat_notwatched">Not watched</string>
    <string name="label_count_stat_onair">On Air</string>
    <string name="label_count_stat_end">End</string>
    <string name="label_count_stat_total">Total</string>
    <string name="action_google_drive_upload">Backup to Drive</string>
    <string name="action_google_drive_download">Restore from Drive</string>
    <string name="action_about">About</string>
    <string name="label_app_intro">This app can help you scheduling time for anime, useful for anime fans.</string>
    <string name="label_report_bug">Report Bugs</string>
    <string name="label_author">Made by: lxfly2000</string>
    <string name="label_view_github_repo">Go to this app\'s GitHub Repository</string>
    <string name="label_contact">Contact with the author</string>
    <string name="label_app_name_qq" translatable="false">QQ</string>
    <string name="label_app_name_email">Email</string>
    <string name="label_app_name_twitter" translatable="false">Twitter</string>
    <string name="label_donate">Donate</string>
    <string name="label_donate_explanation">If you feel this app helpful, please consider donate me with the following
        methods.
    </string>
    <string name="label_app_name_alipay">Alipay</string>
    <string name="label_bilibili_download_settings">Bilibili download settings</string>
    <string name="label_bilibili_download_path">Path to save</string>
    <string name="label_bilibili_download_app_version">Client version</string>
    <string name="label_bilibili_video_quality">Video quality</string>
    <string name="label_bilibili_download_notice">Choose the episodes you want to download.\nAttention:\n1. VIP account
        is required to download 1080p or higher quality.\n2. VIP account or account that purchased the Anime is required
        to download paid Anime.\n3. Some Animes don\'t have all video qualities.\n4. Region-Restricted Anime is not
        supported.\n5. You need to manually start downloading in the application.
    </string>
    <string name="label_download_open_bilibili_app">Open Bilibili after this operation</string>
    <string name="label_thanks">Reference</string>
    <string name="label_thanks_xiaoyaocz" translatable="false">
        <a href="https://github.com/xiaoyaocz/BiliAnimeDownload">xiaoyaocz/BiliAnimeDownload</a>
    </string>
    <string name="label_using_3rdparty">Using third-party components</string>
    <string name="label_using_3rdparty_filepicker" translatable="false">
        <a href="https://github.com/hedzr/android-file-chooser">hedzr/android-file-chooser</a>
    </string>
    <string name="label_choose_star_mark">Choose star marks</string>
    <string name="label_thanks_nI" translatable="false">
        <a href="https://github.com/nICEnnnnnnnLee/BilibiliDown">nICEnnnnnnnLee/BilibiliDown</a>
    </string>
    <string name="label_thanks_nI_acfun" translatable="false">
        <a href="https://github.com/nICEnnnnnnnLee/AcFunDown">nICEnnnnnnnLee/AcFunDown</a>
    </string>
    <string name="label_bilibili_download_api">Download API</string>
    <string name="label_app_name_bilibili">Bilibili</string>
    <string name="menu_test_availability">Test Availability</string>
    <string name="label_app_name_iqiyi">iQiyi</string>
    <string name="label_app_name_qqvideo">QQ Video</string>
    <string name="label_app_name_youku">Youku</string>
    <string name="label_app_name_etc">etc</string>
    <string name="menu_test_availability_retest">Retest</string>
    <string name="menu_show_availability_true">Show Available</string>
    <string name="menu_show_availability_false">Show Unavailable</string>
    <string name="label_test_availability_connection_time_out">Connection time out for testing availability
        (Milliseconds)
    </string>
    <string name="label_test_availability_read_time_out">Read time out for testing availability (Milliseconds)</string>
    <string name="label_max_redirect_count">Max redirect count</string>
    <string name="label_thanks_ipcjs_bilibili_helper" translatable="false">
        <a href="https://github.com/ipcjs/bilibili-helper">ipcjs/bilibili-helper</a>
    </string>
    <string name="label_thanks_biliplus" translatable="false">
        <a href="https://www.biliplus.com/">BiliPlus</a>
    </string>
    <string name="label_other_settings">Etc. settings</string>
    <string name="key_sort_method" translatable="false">anime_sort_method</string>
    <string name="key_sort_order" translatable="false">anime_sort_order</string>
    <string name="key_sort_separate_abandoned" translatable="false">anime_sort_separate_abandoned</string>
    <string name="key_bilibili_save_path" translatable="false">bilibili_save_path</string>
    <string name="key_bilibili_version_index" translatable="false">bilibili_version_index</string>
    <string name="key_api_method" translatable="false">bilibili_api_method</string>
    <string name="key_star_mark" translatable="false">star_mark</string>
    <string name="key_test_connection_timeout" translatable="false">test_connection_timeout</string>
    <string name="key_test_read_timeout" translatable="false">test_read_timeout</string>
    <string name="key_redirect_max_count" translatable="false">redirect_max_count</string>
    <string name="label_sort_method_sort_by">Sort by</string>
    <string name="label_sort_method_sort_order">In order</string>
    <string name="label_thanks_youget" translatable="false">
        <a href="https://github.com/soimort/you-get">you-get</a>
    </string>
    <string name="label_using_3rdparty_mp4parser" translatable="false">
        <a href="https://github.com/sannies/mp4parser">mp4parser</a>
    </string>
    <string name="label_using_3rdparty_bilibilimerge" translatable="false">
        <a href="https://gitee.com/chengww5217/BiliBiliMerge">BilibiliMerge</a>
    </string>
    <string name="label_using_3rdparty_photoview" translatable="false">
        <a href="https://github.com/chrisbanes/PhotoView">chrisbanes/PhotoView</a>
    </string>
</resources>