<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/action_add_item" android:id="@+id/action_add_item"/>
    <item android:title="@string/action_remove_all_item" android:id="@+id/action_remove_all_item"/>
    <item android:title="@string/action_show_anime_update" android:id="@+id/action_show_anime_update"/>
    <item android:title="@string/action_show_count_statistics" android:id="@+id/action_show_count_statistics"/>
    <item android:title="@string/menu_test_availability" android:id="@+id/action_test_availability"/>
    <item android:title="@string/action_view_web_page" android:id="@+id/action_view_web_page"/>
    <item android:title="@string/action_google_drive_upload" android:id="@+id/action_drive_upload"/>
    <item android:title="@string/action_google_drive_download" android:id="@+id/action_drive_download"/>
    <item android:title="@string/action_settings" android:id="@+id/action_settings"/>
    <item android:title="@string/action_about" android:id="@+id/action_about"/>
    <item
            android:id="@+id/app_bar_search"
            android:icon="@drawable/ic_search_black_24dp"
            android:title="@android:string/search_go" app:actionViewClass="android.widget.SearchView"
            app:showAsAction="ifRoom"/>
</menu>