<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".AboutActivity">

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
    >
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:orientation="vertical" android:padding="8dp">
            <TextView
                    android:text="@string/app_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/textView"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2" android:textSize="24sp"/>
            <TextView
                    android:text="@string/label_version_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/textVersionInfo"/>
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/textView14"/>
            <TextView
                    android:text="@string/label_app_intro"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/textView2"/>
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/textView3"/>
            <TextView
                    android:text="@string/label_report_bug"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/textViewReportBug"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2" android:textSize="18sp"/>
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/textView13"/>
            <TextView
                    android:text="@string/label_view_github_repo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/textViewGotoGithub"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2" android:textSize="18sp"/>
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/textView5"/>
            <TextView
                    android:text="@string/label_donate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/textView10"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2" android:textSize="18sp"/>
            <TextView
                    android:text="@string/label_donate_explanation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/textView11"/>
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" style="?buttonBarStyle">
                <Button
                        android:text="@string/label_app_name_qq"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/buttonDonateQQ"
                        android:layout_weight="1" style="?buttonBarButtonStyle"/>
                <Button
                        android:text="@string/label_app_name_alipay"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/buttonDonateAlipay"
                        android:layout_weight="1" style="?buttonBarButtonStyle"/>
            </LinearLayout>
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/textView12"/>
            <TextView
                    android:text="@string/label_contact"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/textView8"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2" android:textSize="18sp"/>
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" style="?buttonBarStyle">
                <Button
                        android:text="@string/label_app_name_qq"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/buttonContactQQ"
                        android:layout_weight="1" style="?buttonBarButtonStyle"/>
                <Button
                        android:text="@string/label_app_name_bilibili"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/buttonContactBilibili"
                        android:layout_weight="1" style="?buttonBarButtonStyle"/>
                <Button
                        android:text="@string/label_app_name_twitter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/buttonContactTwitter"
                        android:layout_weight="1" style="?buttonBarButtonStyle"/>
                <Button
                        android:text="@string/label_app_name_email"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/buttonContactEmail"
                        android:layout_weight="1" style="?buttonBarButtonStyle"/>
            </LinearLayout>
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/textView9"/>
            <TextView
                    android:text="@string/label_author"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/textViewMadeBy"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2" android:textSize="18sp"/>
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/textView18"/>
            <TextView
                    android:text="@string/label_thanks"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/textView19"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2" android:textSize="18sp"/>
            <TextView
                    android:text="@string/label_thanks_xiaoyaocz"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/textViewThanksXiaoyaocz"
                    android:textSize="18sp"/>
            <TextView
                    android:text="@string/label_thanks_nI"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/textViewThanksNl"
                    android:textSize="18sp"/>
            <TextView
                    android:text="@string/label_thanks_ipcjs_bilibili_helper"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/textViewThanksIpcjsBilibiliHelper"
                    android:textSize="18sp"/>
            <TextView
                    android:text="@string/label_thanks_biliplus"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/textViewThanksBiliplus"
                    android:textSize="18sp"/>
            <TextView
                    android:text="@string/label_thanks_youget"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/textViewThanksYouget"
                    android:textSize="18sp"/>
            <TextView
                    android:text="@string/label_thanks_nI_acfun"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/textViewThanksNlAcFun"
                    android:textSize="18sp"/>
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/textView20"/>
            <TextView
                    android:text="@string/label_using_3rdparty"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/textView21"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2" android:textSize="18sp"/>
            <TextView
                    android:text="@string/label_using_3rdparty_filepicker"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/textViewUsingFilepicker"
                    android:textSize="18sp"/>
            <TextView
                    android:text="@string/label_using_3rdparty_bilibilimerge"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/textViewUsingBilibiliMerge"
                    android:textSize="18sp"/>
            <TextView
                    android:text="@string/label_using_3rdparty_mp4parser"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/textViewUsingMp4parser"
                    android:textSize="18sp"/>
            <TextView
                    android:text="@string/label_using_3rdparty_photoview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/textViewUsingPhotoView"
                    android:textSize="18sp"/>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>