<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
              android:orientation="horizontal"
              android:layout_width="match_parent"
              android:layout_height="wrap_content">

    <android.support.constraint.ConstraintLayout
            android:layout_width="120dp"
            android:layout_height="match_parent">

        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" app:srcCompat="@mipmap/ic_launcher"
                android:id="@+id/imageView" android:layout_marginRight="0dp"
                app:layout_constraintRight_toRightOf="parent" app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="0dp" android:layout_marginLeft="0dp"
                app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="0dp" android:contentDescription="@string/label_anime_cover"/>
    </android.support.constraint.ConstraintLayout>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:layout_weight="1">

            <TextView
                    android:text="@string/label_anime_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/textAnimeTitle"
                    android:textColor="@android:color/black" android:textStyle="bold" android:textSize="24sp"
                    tools:layout_editor_absoluteX="8dp" tools:layout_editor_absoluteY="8dp"
                    android:layout_alignParentTop="true" android:layout_alignParentStart="true"
                    android:layout_toStartOf="@+id/textRanking"/>
            <TextView
                    android:text="@string/label_anime_ranking"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/textRanking"
                    android:textColor="@android:color/holo_orange_dark"
                    tools:layout_editor_absoluteY="8dp" tools:layout_editor_absoluteX="198dp"
                    android:layout_alignParentTop="true" android:layout_alignParentEnd="true"/>
        </RelativeLayout>
        <TextView
                android:text="@string/label_anime_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/textAnimeDescription" android:layout_weight="1"/>
        <com.zhy.view.flowlayout.TagFlowLayout
                android:id="@+id/layoutCategory"
                app:max_select="0"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
        </com.zhy.view.flowlayout.TagFlowLayout>
        <TextView
                android:text="@string/app_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/textSchedule" android:layout_weight="1"/>
        <com.zhy.view.flowlayout.TagFlowLayout
                android:id="@+id/layoutEpisodes"
                app:max_select="-1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
        </com.zhy.view.flowlayout.TagFlowLayout>
    </LinearLayout>
</LinearLayout>